# yt-smtp-cather

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  entrypoint.sh  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
database/: __init__.py
database/tables/: mails.py  transport_map.py
docker/: entrypoint.sh  start_servers.sh
docker/main/: Dockerfile  entrypoint.sh
docker/main/etc/postfix/: master.cf  transport  (+1 more)
docs/: README.md
entrypoint/: entrypoint.sh  setup_dev.sh  start_servers.sh
postfix/: main.cf  master.cf  transport
specs/unit/yt_smtp_catcher/: test_routes.py
sqlite/: 001_mails.sql  create_database.sql
sqlite/latest/: 002_transport_map.sql
src/: setup.cfg
src/database/: readme.md
src/database/tables/: mails.py
src/yt_smtp_catcher/: __main__.py  app.py  mail_receiver.py
src/yt_smtp_catcher/blueprints/: detail.py  mail.py
src/yt_smtp_catcher/templates/: common_start.html  detail.html  index.html
yt_smtp_catcher/: __main__.py  app.py  mail_receiver.py  routes.py  setup_database.py
yt_smtp_catcher/blueprints/: delete.py  detail.py  mail.py
yt_smtp_catcher/static/css/: style.css
yt_smtp_catcher/templates/: detail.html  index.html  mail.html  navi.html
yt_testing_smtpserver/: __main__.py  create_app.py  routes.py  setup_database.py
yt_testing_smtpserver/blueprints/: index.py
yt_testing_smtpserver/db/: __init__.py  connect_database.py
yt_testing_smtpserver/db/mails/: __init__.py  mails.py
yt_testing_smtpserver/templates/: detail.html  index.html
(+2 files in other folders)
