[metadata]
name = yt_smtp_catcher
version = 0.0.1

[options]
package_dir =
    = yt_smtp_catcher
pakages = find:
install_requires =
    Flask >=3.0.0, <4.0.0
    gunicorn >=21.2.0, <22.0.0

[options.extras_require]
dev =
    pytest >=7.4.0, <8.0.0
    pytest-mock >=3.12.0, <4.0.0
    coverage >=7.4.0, <8.0.0
    pytest-cov >=4.1.0, <5.0.0

[tool:pytest]
addopts = --cov=yt_smtp_catcher
