[metadata]
name = yt_smtp_catcher
version = 0.0.1

[options]
package_dir =
    = yt_smtp_catcher
pakages = find:
install_requires =
    Flask >=3.0.0, <3.1.0
    gunicorn >=21.2.0, <21.3.0
    pydantic >=2.6.0, <2.7.0

[options.extras_require]
dev =
    pytest >=7.4.0, <7.5.0
    pytest-mock >=3.12.0, <3.13.0
    coverage >=7.4.0, <7.5.0
    pytest-cov >=4.1.0, <4.2.0

[tool:pytest]
addopts = --cov=yt_smtp_catcher
